--- a/scss/utils/_colors.scss
+++ b/scss/utils/_colors.scss
@@ -1,2 +1,22 @@
 $dark-purple: #681d5e;
 $white: #fff;
+$light-green: #1abb9c;
+$dark-blue: #1C304A;
+$light-pink: #fbdce1;
+$purple: #2f286c;
+$primary-brown: #8b7b61bd;
+$secondary-brown: #AFA581;
+$dark-brown: #432618;
+$super-dark-brown: #281a17;
+$brown: #5b3a2e;
+$brown-800: #49281f;
+$brown-button: #844744;
+$brown-900: #723930;
+$antique-brass: #d99b84;
+$antique-brass-lighter: #c58370;
+$black: #000;
+$sunlit-sand: #eaceb9;
+$light-sand: #fddcd3;
+$neutral-100: #dcb3b0;
+$neutral-200: #bb6862;
+$pink-100: #B5565A;
