--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,6 +59,48 @@ body {
   }
 }
 
+.drawer {
+  position: fixed;
+  top: -20px;
+  right: -850px;
+  width: 250px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  transition: right 0.3s ease;
+  z-index: 1001; /* Ensure it's above the overlay */
+  padding: 20px;
+  list-style: none;
+}
+
+.drawer.open {
+  right: 0;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+  z-index: 1000; /* Ensure it's below the drawer */
+}
+
+.overlay.visible {
+  opacity: 1;
+  visibility: visible;
+}
+/* Mobile Nav Button */
+.mobile-nav-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
 .mobile-nav-button {
   background-color: transparent;
   border-style: hidden;
@@ -296,6 +338,11 @@ svg {
     right: 5px;
     margin-top: auto;
     height: 330px;
+
+    @include mobile {
+      margin-top: 120px;
+      height: 210px;
+    }
   }
 
   ul {
