--- a/scss/utils/_colors.scss
+++ b/scss/utils/_colors.scss
@@ -20,3 +20,9 @@ $light-sand: #fddcd3;
 $neutral-100: #dcb3b0;
 $neutral-200: #bb6862;
 $pink-100: #B5565A;
+$sand: #c8b5a6;
+$cream: #fae9c3;
+$cream-brown: #edb09dba;
+$light-cream: #f8eae7;
+$light-pink-footer: #f5cfcc;
+$brown-wine: #451412;
