--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Montserrat", Arial, sans-serif;
 }
 .project-card button:hover {
   background-color: #c58370;
@@ -259,6 +260,10 @@ body {
   margin: 0;
 }
 
+button {
+  font-family: "Montserrat", Arial, sans-serif;
+}
+
 .nav-ul {
   background-color: #281a17;
   height: 3.125rem;
@@ -272,13 +277,12 @@ body {
 .nav-ul ul {
   list-style: none;
   display: flex;
-  margin: 0 15rem 0 5rem;
   gap: 5rem;
 }
 .nav-ul li a {
   color: #fff;
   text-decoration: none;
-  font-size: 1.3125rem;
+  font-size: 1.3rem;
 }
 .nav-ul strong {
   color: #fff;
@@ -307,16 +311,52 @@ body {
   right: -850px;
   width: 250px;
   height: 100%;
-  background-color: #fff;
+  background-color: hsl(20, 60%, 90%);
+  background-size: 100%;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
-  transition: right 0.3s ease;
-  z-index: 1001; /* Ensure it's above the overlay */
+  transition: right 0.5s ease;
+  z-index: 1001;
   padding: 20px;
   list-style: none;
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.drawer ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 5rem;
+}
+.drawer li a {
+  color: #5b3a2e;
+  text-decoration: none;
+  font-weight: 600;
 }
 
 .drawer.open {
   right: 0;
+}
+
+.drawer-top {
+  width: 450px;
+  height: 60px;
+  position: absolute;
+  left: 0;
+}
+
+.close-nav-button button {
+  background-color: transparent;
+  border-style: hidden;
+  position: absolute;
+  right: 0;
+  top: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .overlay {
@@ -329,7 +369,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease;
-  z-index: 1000; /* Ensure it's below the drawer */
+  z-index: 1000;
 }
 
 .overlay.visible {
@@ -339,15 +379,10 @@ body {
 
 /* Mobile Nav Button */
 .mobile-nav-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-.mobile-nav-button {
   background-color: transparent;
   border-style: hidden;
   color: #fae9c3;
+  cursor: pointer;
 }
 .mobile-nav-button svg {
   fill: #fae9c3;
@@ -377,6 +412,11 @@ h1.name-main {
     font-size: 2rem;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  h1.name-main {
+    font-size: 3rem;
+  }
+}
 
 .button-form-contact {
   text-decoration: none;
@@ -389,12 +429,20 @@ h1.name-main {
   align-items: center;
   background-color: #281a17;
   color: #fff;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media screen and (max-width: 767px) {
   .button-form-contact {
     font-size: 1rem;
     margin: 1rem 0;
-    padding: 0.8rem;
+    padding: 0.5rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .button-form-contact {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -429,7 +477,7 @@ h1.name-main {
 
 .divider .line {
   flex-grow: 1;
-  height: 2px;
+  height: 1.8px;
   background-color: #432618;
 }
 
@@ -443,6 +491,12 @@ h1.name-main {
   filter: drop-shadow(0.625rem 0 0.625rem rgb(15, 15, 15));
   margin-top: auto;
 }
+@media screen and (max-width: 380px) {
+  .geici-image {
+    width: 9rem;
+    height: auto;
+  }
+}
 @media screen and (max-width: 767px) {
   .geici-image {
     width: 10rem;
@@ -452,19 +506,28 @@ h1.name-main {
     margin-top: auto;
   }
 }
-
-.hero-text-container {
-  color: #1C304A;
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .geici-image {
+    width: 20rem;
+    height: auto;
+  }
 }
+
 .hero-text-container strong {
   font-size: 1.2rem;
   color: #000;
   display: block;
+  text-align: center;
 }
 @media screen and (max-width: 767px) {
   .hero-text-container strong {
     font-size: 0.8rem;
-    margin-left: 0.8rem;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-text-container strong {
+    text-align: center;
   }
 }
 @media screen and (max-width: 767px) {
@@ -474,75 +537,126 @@ h1.name-main {
   }
 }
 
-.about-me {
+.test-image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 80px;
+}
+
+.hero-image-test {
+  background-color: rgba(237, 176, 157, 0.7294117647);
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #eaceb9;
-  padding: 3rem;
-  gap: 3rem;
+  gap: 0rem;
+  justify-content: center;
+}
+.hero-image-test img {
+  width: 35rem;
+  height: 35rem;
+  padding: 0;
+  margin: 1rem;
+  margin-left: 5rem;
+  border-radius: 0.3125rem;
+  filter: drop-shadow(0.325rem 0 0.325rem #432618);
 }
 @media screen and (max-width: 767px) {
-  .about-me {
+  .hero-image-test img {
+    height: 22rem;
+    width: 22rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-image-test img {
+    height: 30rem;
+    width: 30rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.hero-image-test p,
+.hero-image-test ul {
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+}
+@media screen and (max-width: 767px) {
+  .hero-image-test p,
+  .hero-image-test ul {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-image-test p,
+  .hero-image-test ul {
+    width: 100%;
+  }
+}
+.hero-image-test ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  color: #000;
+  width: 80%;
+}
+@media screen and (max-width: 767px) {
+  .hero-image-test ul {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-image-test ul {
+    width: 100%;
+  }
+}
+.hero-image-test li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.2rem;
+}
+.hero-image-test svg {
+  margin-right: 0.5rem;
+  flex-shrink: 0;
+}
+.hero-image-test strong {
+  color: #432618;
+}
+.hero-image-test .typewriter {
+  font-size: 2rem;
+}
+.hero-image-test .text-container {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+@media screen and (max-width: 767px) {
+  .hero-image-test .text-container {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-image-test .text-container {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero-image-test {
     padding: 1rem;
     flex-direction: column;
     display: flex;
     align-items: center;
   }
 }
-.about-me p {
-  width: 80%;
-  color: #000;
-  font-size: 1rem;
-}
-@media screen and (max-width: 767px) {
-  .about-me p {
-    width: 100%;
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-image-test {
+    flex-direction: column;
   }
-}
-.about-me strong {
-  color: #432618;
-}
-.about-me .typewriter {
-  font-size: 2rem;
-}
-.about-me ul {
-  list-style: none;
-  color: #000;
-}
-
-.technology-image {
-  height: 35rem;
-  width: 35rem;
-  border-radius: 0.3125rem;
-  margin-left: 10rem;
-  filter: drop-shadow(0.325rem 0 0.325rem #432618);
-}
-@media screen and (max-width: 767px) {
-  .technology-image {
-    height: 20rem;
-    width: 20rem;
-    margin-left: 0rem;
-  }
-}
-
-svg {
-  margin-right: 0.5rem;
-  flex-shrink: 0;
-}
-
-.technology-list {
-  margin: 0;
-  padding: 0;
-}
-.technology-list li {
-  display: flex;
-  align-items: center;
-  margin-bottom: 0.2rem;
-}
-
-.cards-list {
-  list-style: none;
 }
 
 .projects-section {
