--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@mixin x-small {
+  @media screen and (max-width: 380px) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media screen and (min-width: 768px) and (max-width: 1024px) {
     @content;
@@ -72,4 +78,9 @@
 @mixin column-mobile {
   flex-direction: column;
   display: flex;
+}
+
+@mixin normalize-button {
+  background-color: transparent;
+  border-style: hidden;
 }
